KiCad ChangeLog 2010
====================

Please add newer entries at the top, list the date and your name with
email address.

2010-dec-01, UPDATE Jean-Pierre Charras <jean-pierre.charras@gipsa-lab.inpg.fr>
================================================================================
Gerbview:
    Added support for complex definitions of parameters in aperture macros and primitives macro
    (a complex definition in a parameter that is calculated by an arithmetical expression)
    Gerbview should now have a decent support of Gerber language.
    Currently only the obscure knockout command is not supported (I have no motivation to do that)
    Other "bug":
    scale in A and B axis is poorly supported: coordinates are scaled, but shapes can have problem:
       fro instance, a circle is drawn as a circle when A and B scales are different,
       and perhaps should be an ellipse.
       On the other hand, Gerber doc is not clear about the meaning of A and B scale.
       (Alas! Gerber doc is not clear about most of advanced commands)

2010-nov-19 UPDATE Wayne Stambaugh <stambaughw@verizon.net>
================================================================================
++EESchema
  * Move library new component and schematic edit sheet dialogs to dialogs
    folder.
  * Set library new component and schematic edit sheet dialogs default button.
  * Create wxFormBuilder version of edit sheet label dialog and remove hand
    coded version.
  * More coding policy fixes.


2010-nov-19 UPDATE Wayne Stambaugh <stambaughw@verizon.net>
================================================================================
++EESchema
  * Move library dimension, schematic configuration, and schematic options
    dialogs to dialogs folder.
  * Set library dimension, schematic configuration, and schematic options
    dialogs default button to OK button.
  * Kicad coding policy clean ups.


2010-nov-17 UPDATE Wayne Stambaugh <stambaughw@verizon.net>